hphp/hack/test/typecheck/references/pass_by_ref/pass_by_ref_annotation5.php.exp
File "pass_by_ref_annotation5.php", line 7, characters 7-12:
$this cannot be passed by reference (NastCheck[3067])
File "pass_by_ref_annotation5.php", line 8, characters 13-15:
$$ cannot be passed by reference (NastCheck[3067])
